--- a/test_oa_project/www/Public/css/home.css
+++ b/test_oa_project/www/Public/css/home.css
@@ -1,6 +1,6 @@
 /**/
 .wrapBox { width: 1130px;  margin: 0 20px; background: #fff;}
-.feCont {margin-bottom: 20px;}
+.feCont {margin-bottom:10px;}
 .feContTop { height: 55px; line-height: 55px; border-bottom: 1px solid #dedfdf;}
 .feContTop .topTit { line-height: 14px; font-size: 0; cursor: default;}
 .feContTop .topTit span { float: left; display: block; padding: 20px 0; font-size: 14px; color: #b9bdc4;}
@@ -11,14 +11,14 @@
 .topRight .return:hover { color: #fff; border-color: #53b567; background: #53b567;}
 
 /*======================================== 黄金分割线 ========================================*/
-.shortcutButton { margin-bottom: 20px;}
+.shortcutButton {margin-bottom:10px;}
 .shortcutButton .sbTop { width: 100%; height: 30px; line-height: 30px; background: #eaeaea;}
 .sbTop span { float: left; padding-left: 20px; line-height: 30px; color: #333;}
-.sbTop i { float: right; width: 30px; height: 30px; padding-right: 20px; color: #333; text-align: center; cursor: pointer;}
+.sbTop i {float:right;width:30px;height:30px;padding-right:34px;color #333;text-align:center;cursor:pointer;}
 .sbTop i:hover { color: #53b567;}
 .sbCont { width: 1128px; height: 129px; border: 1px solid #dedfdf; border-top: none;}
 .sbCont .sbContBd { margin-right: -4px;}
-.sbCont ul { padding: 34px; overflow: hidden;}
+.sbCont ul {padding:5px 34px 18px;overflow:hidden;}
 .sbCont li { float: left; width: 130px; height: 60px; line-height: 60px; margin-right: 3px;}
 .sbCont li a { display: block; width: 100%; height: 60px; color: #fff; text-align: center;}
 .sbCont li a.sbOne { background: #f9c13a;}
@@ -89,9 +89,22 @@
 
 /*0906*/
 .wrapBox#homeWrap {width:auto;min-width:1130px;}
-.wrapBox#homeWrap .sbCont {width:auto;}
+.wrapBox#homeWrap .sbCont {width:auto;height:auto;}
 .systemUpdate, .announcement {width:49%;height:297px;overflow:hidden;}
 .systemUpdate {margin-right:2%;}
 .msgBoxTop, .msgBoxCont {width:auto;}
 .msgBoxCont {height:auto;min-height:264px;}
 
+/*1115*/
+.statistics-show {width:100%;height:auto;margin-bottom:10px;background:#fff;}
+.statistics-show .show-top {height:32px;line-height:32px;font-size:12px;color:#333;text-align:left;background:#eaeaea;}
+.statistics-show .show-top .top-left {float:left;height:32px;line-height:32px;;}
+.statistics-show .show-top .left-name {margin-left:20px;margin-right:32px;font-size:14px;font-weight:bold;}
+.statistics-show .show-top p {display:inline-block;}
+.statistics-show .show-top .top-right {float:right;height:32px;line-height:32px;margin-right:20px;}
+.statistics-show .show-top .top-right:hover {color:#53b567;cursor:pointer;}
+.statistics-show #show_tabele {width:100%;height:auto;margin-top:-1px;border:1px solid #dedfdf;border-top:none;}
+.statistics-show #show_tabele tr {}
+.statistics-show #show_tabele th, .statistics-show #show_tabele td {text-align:center;}
+.statistics-show #show_tabele th {height:46px;line-height:46px;font-size:14px;color:#333;font-weight:bold;background:#bae1c2;}
+.statistics-show #show_tabele td {height:65px;line-height:65px;color:#333;}
