--- a/www/Public/css/taskAdd.css
+++ b/www/Public/css/taskAdd.css
@@ -24,7 +24,7 @@
 .mission-today label input[type='checkbox'], .data label input[type='checkbox'] {width:14px;height:14px;margin-top:-2px;margin-right:5px;vertical-align:middle;}
 .mission-today label span, .data label span {line-height:14px;}
 
-
+.rows-right .taskadd-submit {width:102px;height:34px;line-height:34px;font-size:14px;color:#fff;text-align:center;border:none;background:#53b567;}
 
 
 
